# mogukefu

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  test_llm_connection.py
.kiro/specs/telegram-intent-bot/: design.md  requirements.md  tasks.md
src/: __init__.py  bot.py  config.py  intent_classifier.py  keyword_matcher.py  llm_client.py  message_handler.py  reply_manager.py
tests/: __init__.py  test_bot.py  test_config.py  test_intent_classifier.py  test_keyword_matcher.py  test_llm_client.py  test_message_handler.py  test_reply_manager.py
